# opengl_proj

./: .gitignore  CMakeLists.txt
res/: main.glslv
src/: main.cpp
src/graphics/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
src/loaders/: png_loading.cpp  png_loading.h
src/voxels/: Chunk.cpp  Chunk.h  voxel.h
src/window/: Camera.cpp  Camera.h  Events.cpp  Events.h  Window.cpp  Window.h
